crates/keron-lang/tests/corpus/errors/check/builtin_type_shadow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `Resource` is a builtin and cannot be redefined
  --> 1:8
  |
1 | struct Resource { path: String }
  |        ^^^^^^^^

error: `Secret` is a builtin and cannot be redefined
  --> 3:6
  |
3 | type Secret = "plain"
  |      ^^^^^^
